--- a/wp-content/themes/wp-devs/style.css
+++ b/wp-content/themes/wp-devs/style.css
@@ -1,7 +1,7 @@
 /*
 Theme Name: WP Devs
 Theme URI: https://website.com/wp-devs
-Author: Marcelo Vieira
+Author: Vinicius Nascimento
 Author URI: https://website.com/wp-devs
 Description: This theme is for learning purposes only.
 Requires at least: 5.6
