Adicionando suporte customização hero

--- a/wp-content/themes/wp-devs/style.css
+++ b/wp-content/themes/wp-devs/style.css
@@ -389,7 +389,7 @@ Tags: one-column, custom-menu, custom-logo, featured-images, translation-ready
     --wpdevs-light-blue: #2A92D3;
     --wpdevs-deep-blue: #213C4D;
     --wpdevs-black-blue: #001E32;
-    --wpdevs-yellow: #CFAF07;
+    --wpdevs-yellow: #ecc604;
 }
 *,
 ::after,
@@ -658,7 +658,7 @@ img {
     padding: var( --wpdevs-light-padding );
 }
 .hero .overlay{
-    background: rgb(0 0 0 / 27%);
+    background: rgba(0, 0, 0, 30%);
     display: flex;
     align-items: center;
     justify-content: center;
