Trabalhando com theme.json

--- a/wp-content/themes/wp-devs/style.css
+++ b/wp-content/themes/wp-devs/style.css
@@ -1297,7 +1297,7 @@ a img.aligncenter {
 .site-content {
     overflow: hidden;
 }
-
+/*
 .has-primary-background-color {
     background-color: var(--wpdevs-black-blue);
 }
@@ -1313,3 +1313,4 @@ a img.aligncenter {
 .has-secondary-color {
     color: var(--wpdevs-yellow);
 }
+*/
